--- a/lab task2.1.html
+++ b/lab task2.1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Lab Task 03 - CSS Box Model</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
 
@@ -25,3 +25,4 @@
 
 </body>
 </html>
+
